# syntect_server

./: .travis.yml  Cargo.toml  Dockerfile  README.md  RustConfig  build.debian.sh  build.sh  buildkite.yml  deploy-ci.sh  publish.sh
.github/workflows/: docker-image.yml
src/: classed_table_generator.rs  css_table.rs  main.rs
syntect/assets/: default.themedump  default_newlines.packdump  default_nonewlines.packdump
