[package]
name = "syntect_server"
version = "0.1.0"
authors = ["Stephen Gutekanst <stephen.gutekanst@gmail.com>"]

[dependencies]
syntect = { git = "https://github.com/slimsag/syntect" }
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rayon = "0.8"
lazy_static = "0.2"
