[package]
name = "syntect_server"
version = "0.1.0"
authors = ["Stephen Gutekanst <stephen.gutekanst@gmail.com>"]

[dependencies]
syntect = { git = "https://github.com/slimsag/syntect" }
rocket = "0.4"
rocket_contrib = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rayon = "1.0"
lazy_static = "1.0"
